# gear

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  run_gtest.sh  sample.cpp  socket-sample.cpp
gear/: CMakeLists.txt  build_gear_lib.sh
gear/http/: HttpClient.cpp  HttpClient.hpp  HttpConfig.cpp  HttpConfig.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  StringUtils.cpp  StringUtils.hpp  http_request.cpp  http_request.hpp  string_utils.cpp
gear/socket/: SocketClient.cpp  SocketClient.hpp  socket.cpp  socket.hpp
gear/socketio/: sio_client.cpp  sio_client.h  sio_socket.cpp  sio_socket.h
gear/socketio/internal/: sio_client_impl.cpp  sio_client_impl.h  sio_packet.cpp  sio_packet.h
include/httpclient/: CMakeLists.txt  http_client.cpp  http_client.hpp  http_request.cpp  http_request.hpp  http_response.hpp
lib/: CMakeLists.txt  cmake_install.cmake  iOS.cmake
lib/httpclient/: http_config.cpp  http_config.hpp  http_response.cpp  string_utils.hpp
test/: HttpTest.cpp  SocketTest.cpp  semaphore.cpp  socket_test.cpp
vendors/openssl/android/include/openssl/: opensslconf.h
vendors/openssl/ios/include/openssl/: opensslconf.h
vendors/openssl/osx/include/openssl/: opensslconf.h
vendors/websocketpp/websocketpp/transport/asio/security/: tls.hpp
